# moonshine.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/main/: CMakeLists.txt  main.cpp
examples/stream-server/: CMakeLists.txt  main.cpp
examples/web/: index.html  server.py
models/: convert-moonshine-streaming-to-gguf.py  test_conv_stem.py  test_encoder.py  test_full_pipeline.py  test_streaming_adapter_decoder.py  test_streaming_encoder.py  test_streaming_frontend.py
src/: moonshine-audio.cpp  moonshine-detect.cpp  moonshine-detect.h  moonshine-streaming-impl.h  moonshine-streaming.cpp  moonshine-streaming.h
tests/: CMakeLists.txt  test-moonshine.cpp  test-streaming-encoder.cpp  test-streaming-frontend.cpp  test-streaming-incremental.cpp  test-streaming-transcribe.cpp
